# Project-yoink

./: .gitignore  .markdownlint.json  .safety-policy.yml  ABOUT.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config.example.json  discord_yoink.py  project_setup.py  pyproject.toml  requirements.txt  setup.bat  setup.py  setup.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: bot_setup.md  configuration.md
examples/: emergency_admin_example.py
src/: __init__.py  backup_chain.py  backup_manager.py  config.py  discord_client.py  exporter.py  media_downloader.py  server_recreator.py  utils.py
